# magnificent-git-wiper

./: Cargo.toml  README.md
src/: cli.rs  file_ops.rs  git_ops.rs  main.rs
