[package]
name = "magnificent-git-wiper"
version = "0.1.0"
edition = "2024"

[dependencies]
git2 = "0.20.0"          # For Git repository operations
clap = { version = "4.5", features = ["derive"] }  # For command-line argument parsing
walkdir = "2.5"        # For directory traversal
regex = "1.11.1"         # For pattern matching
rayon = "1.10"         # For parallel processing
serde = { version = "1.0", features = ["derive"] }  # For serialization (optional config files)
serde_json = "1.0"     # For JSON handling (if needed)